--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-#The webmab html file of app2
+webmab html file of app2
 WorldMap_Info.html
 hosts
-virtual
+credentials.txt
+__pycache__
+student.db
